# Flask-Serializer

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
examples/: examples_usage.py
flask_schema/: __init__.py
flask_schema/cache_object/: cached.py
flask_schema/func_field/: __init__.py  filter.py  query.py
flask_schema/mixins/: __init__.py  details.py  lists.py
flask_serializer/: __init__.py
flask_serializer/func_field/: __init__.py  filter.py  foreign.py  query.py
flask_serializer/mixins/: __init__.py  details.py  lists.py
flask_serializer/utils/: empty.py
test/: init.sql  test_app.py  test_models.py  test_with_python_object.py  test_with_str.py
