[metadata]
name = flask_schema
description-file = README.md
# Version needs regex in setup.py.
url = https://github.com/ZinkLu
project_urls =
    Code = https://github.com/ZinkLu/Flask-Schema
license = MIT
author = zinklu
author_email = zinkworld@live.cn
maintainer = zinklu
maintainer_email = zinkworld@live.cn
description = A Flask serializer built with marshmallow and flask-sqlalchemy
classifiers =
    Development Status :: 3 - alpha
    Environment :: Web Environment
    Framework :: Flask-Schema
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = flask_schema
include_package_data = true
python_requires = >= 2.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = flask_schema

[options.entry_points]


[tool:pytest]
testpaths = test
filterwarnings =
    error
