[metadata]
name = flask_serializer
long_description = file: README.md
# Version needs regex in setup.py.
url = https://github.com/ZinkLu
project_urls =
    Code = https://github.com/ZinkLu/Flask-Serializer
license = MIT
author = zinklu
author_email = zinkworld@live.cn
maintainer = zinklu
maintainer_email = zinkworld@live.cn
description = A Flask serializer built with marshmallow and flask-sqlalchemy
[options]
include_package_data = true
python_requires = >= 2.7
# Dependencies are in setup.py for GitHub's dependency graph.

[tool:pytest]
testpaths = test
filterwarnings =
    error
